syntax = "proto3";

option csharp_namespace = "System.Text.Json.Protobuf.Tests";

message MessageWithEnum {
  TestEnum enum_field = 1;
  int32 regular_field = 2;
}

enum TestEnum {
  UNKNOWN = 0;
  FIRST_OPTION = 1;
  SECOND_OPTION = 2;
}

message MessageWithEnum2 {
	TestEnum2 enum_field = 1;
	bool bool_field = 2;
	double double_field = 3;
}

enum TestEnum2 {
	TestEnum2_UNKNOWN = 0;
	TestEnum2_FIRST_OPTION = 1;
	TestEnum2_SECOND_OPTION = 2;
}